# crev

./: .gitignore  .reviewrc  Cargo.toml  README.md  install.sh
.github/workflows/: crev.yml  release.yml
docs/: context.md  logo.html
src/: ast.rs  config.rs  context.rs  git.rs  history.rs  linters.rs  llm.rs  main.rs  ollama.rs  output.rs  prompt.rs
