[package]
name = "crev"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crev"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.18"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "2"
anyhow = "1"
futures-util = "0.3"
glob = "0.3"

[profile.release]
strip = true
opt-level = 3
