[package]
name = "crev"
version = "0.1.8"
edition = "2021"

[[bin]]
name = "crev"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = { version = "0.18", default-features = false }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "2"
anyhow = "1"
async-trait = "0.1"
futures-util = "0.3"
glob = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"
tree-sitter-javascript = "0.21"

[profile.release]
strip = true
opt-level = 3
